<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Workout App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fab">Floating Action Button</string>
    <string name="x_bar_content_desc">Image depicting the x-bar statistical symbol</string>
    <string name="exercise_card_content_description_media">Content description</string>
    <string name="exercise_card_title">Title</string>
    <string name="exercise_card_secondary_title">Secondary title</string>
    <string name="exercise_card_recycler_view_item">Set item</string>
    <string name="exercise_name">Name</string>
    <string name="exercise_timer">Timer</string>
    <string name="set_weights">Weights</string>
    <string name="set_reps">Reps</string>
    <string name="menu_exercise_list">Favorites</string>
    <string name="menu_workout_list">Scheduled</string>
    <string name="menu_add">Add</string>
    <string name="menu_import">Import</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_order">Order</string>
    <string name="nav_home">Home</string>
    <string name="nav_progress">Progress</string>
    <string name="nav_progress_details">Progress Details</string>
    <string name="nav_exercise_list">Exercises</string>
    <string name="nav_exercise_details">Exercise Details</string>
    <string name="nav_exercise_create">New Exercise</string>
    <string name="nav_exercise_import">Import Exercise</string>
    <string name="nav_workout_list">Workouts</string>
    <string name="nav_workout_details">Workout Details</string>
    <string name="nav_workout_create">New Workout</string>
    <string name="nav_workout_import">Import Workout</string>
    <string name="nav_workout_view_pager">Workout Session</string>
    <string name="nav_workout_session">Workout Session</string>
    <string name="nav_workout_stopwatch">Stopwatch</string>
    <string name="button_bar_cancel">Cancel</string>
    <string name="button_bar_accept">Save</string>
    <string name="button_bar_finish">Finish</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_lap">Lap</string>
    <string name="button_reset">Reset</string>
    <string name="button_continue">Continue</string>
    <string name="button_bar_back">Back</string>
    <string name="undo">UNDO</string>
    <string name="image_check_mark">Check mark</string>
    <string name="stopwatch_start_time">00:00.0</string>
    <string name="card_button_bar_edit">Edit</string>
    <string name="card_button_bar_delete">Delete</string>
    <string name="workout_reminder">Reminder</string>
    <string name="workout_date">Date</string>
    <string name="workout_default_reminder">None</string>
    <string name="workout_reminder_suffix"> before</string>
    <string name="notification_channel_name">CountDownTimer</string>
    <string name="notification_ticker">Ticker</string>
    <string name="notification_content_title">Content Title</string>
    <string name="notification_content_text">Content Text</string>
    <string name="next_workout_title">Upcoming</string>
    <string name="last_workout_title">Previous</string>
    <string-array name="reminder_items">
        <item>05:00 before</item>
    </string-array>
</resources>