<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ui.workout.WorkoutFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:progress="0" />

                <TextView
                    android:id="@+id/text_view_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                    app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                    app:layout_constraintStart_toStartOf="@+id/progress_bar"
                    app:layout_constraintTop_toTopOf="@+id/progress_bar"
                    tools:text="00:00.0" />

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start"
                    style="@style/Widget.MaterialComponents.TimePicker.Button"
                    app:layout_constraintStart_toStartOf="@+id/progress_bar"
                    app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

                <Button
                    android:id="@+id/button_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_stop"
                    style="@style/Widget.MaterialComponents.TimePicker.Button"
                    app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                    app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <TableLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:background="#e6f0ef"
        android:stretchColumns="*">

        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_bar_back"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_bar_finish"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>