<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_item_vertical_spacing"
                android:hint="@string/exercise_name"
                app:startIconDrawable="@drawable/ic_baseline_favorite_24"
                style="@style/FilledBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_item_vertical_spacing"
                android:hint="@string/workout_date"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                style="@style/FilledBox"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:focusable="false"
                    android:inputType="none"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.github.wnebyte.workoutapp.widget.AutoFitRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:columnWidth="200dp"
                android:scrollbars="vertical"
                />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="@dimen/fab_anim_x_start"
        android:contentDescription="@string/fab"
        android:src="@drawable/ic_library_add_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Design.FloatingActionButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>